--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-uuid": "^2.0.0",
     "redux-persist": "^6.0.0",
     "sass": "^1.58.0",
+    "serve": "^14.2.0",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
